--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=HajjiRoua_ci-cd-pipeline-project
-sonar.organization=HajjiRoua
+sonar.organization=hajjiroua
 sonar.host.url=https://sonarcloud.io
 sonar.login=${SONAR_TOKEN}
 sonar.java.binaries=target/
