--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -76,7 +76,7 @@ jobs:
 
       # 4. Scan Docker Image with Trivy
       - name: Scan Docker Image with Trivy
-        uses: aquasecurity/trivy-action@v0.11.0
+        uses: aquasecurity/trivy-action@0.28.0
         with:
           image-ref: your-dockerhub-username/ci-cd-pipeline-app:latest
           severity: CRITICAL,HIGH
