--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -87,7 +87,7 @@ jobs:
 
       # 4. Scan Docker Image with Trivy
       - name: Scan Docker Image with Trivy
-        uses: aquasecurity/trivy-action@v0.28.0
+        uses: aquasecurity/trivy-action@0.28.0
         with:
           image-ref: ${{ secrets.DOCKER_USERNAME }}/ci-cd-pipeline-app:latest
           severity: CRITICAL,HIGH
