--- a/pom.xml
+++ b/pom.xml
@@ -64,27 +64,19 @@
                     </dependency>
                 </dependencies>
             </plugin>
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.8</version>
-                <executions>
-                    <execution>
+                <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.8.10</version>
+            <executions>
+                <execution>
                     <goals>
-                        <goal>prepare-agent</goal>
+                        <goal>prepare-agent</goal> <!-- This prepares the JaCoCo agent -->
+                        <goal>report</goal> <!-- This generates the coverage report after tests -->
                     </goals>
-                    </execution>
-                    <execution>
-                    <id>report</id>
-                    <phase>verify</phase>
-                    <goals>
-                        <goal>report</goal>
-                    </goals>
-                    </execution>
-                </executions>
-                </plugin>
-
-
+                </execution>
+            </executions>
+        </plugin>
             <!-- Compiler plugin for compiling with JDK 11 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
